--- a/README.org
+++ b/README.org
@@ -1,9 +1,11 @@
-#+TITLE: Custom Shell Commands
+#+TITLE: Custom Shell Scripts
 #+AUTHOR: racoelhosilva
 #+DESCRIPTION: Collection of custom made shell scripts for various linux operations
 #+STARTUP: showeverything
 
-** Table Of Contents :toc:
+Collection of custom made shell scripts for various linux operations
+
+*** Table Of Contents :toc:
 - [[#alacritty-theme-changer][Alacritty Theme Changer]]
 
 * Alacritty Theme Changer
