Fixing background changer

--- a/README.org
+++ b/README.org
@@ -50,8 +50,8 @@ This script assumes there is a single file in "WALLPAPER_SRC" which is the backg
 What it does is replacing that file with copy of an image chosen from the "WALLPAPER_DIR".
 
 *Commands:*
-- alacritty-themer ls :: Lists possible wallpaper options
-- alacritty-themer <image> :: Changes the wallpaper file and reloads it using 'feh'
+- chbg ls :: Lists possible wallpaper options
+- chbg <image> :: Changes the wallpaper file and reloads it using 'feh'
 
 
 #+BEGIN_SRC sh :tangle chbg :shebang "#!/bin/sh"
@@ -60,17 +60,15 @@ What it does is replacing that file with copy of an image chosen from the "WALLP
 WALLPAPER_DIR="$HOME/.config/wallpaper/collection"
 WALLPAPER_SRC="$HOME/.config/wallpaper/wallpaper.png"
 
-# List theme options
+# List wallpaper options
 if [ "$#" = 0 ] || [ "$1" = "ls" ]; then
 	echo "The wallpaper options are:"
 	ls "$WALLPAPER_DIR" | sed 's/\([a-z_0-9]*\).png/ - \1/g'
 	exit 0
-else
-	cp "$WALLPAPER_DIR"/"$1".png "$WALLPAPER_SRC" 2>/dev/null
 fi
 
 # Try to update the current wallpaper
-if ls $THEME_DIR | grep -w "$1.png" >/dev/null; then
+if ls $WALLPAPER_DIR | grep -w "$1.png" >/dev/null; then
 	cp "$WALLPAPER_DIR"/"$1".png "$WALLPAPER_SRC" 2>/dev/null
     feh --bg-fill $WALLPAPER_SRC
     exit 0
