Quick fix in the lc-ar

--- a/README.org
+++ b/README.org
@@ -258,7 +258,7 @@ sed -ri 's/(\| )('"$DIFFICULTY"'[[:space:]]\|[[:space:]])([0-9]+)( \|)/echo "\1\
 sed -ri 's/(\| )(Total[[:space:]]\|[[:space:]])([0-9]+)( \|)/echo "\1\2$((\3+1))\4"/ge' README.md
 
 
-git add "$TOPIC"/"$DIFFICULTY"/"$1"
+git add "$TOPIC"/"$DIFFICULTY"/"$1" README.md
 git commit -m "Solved problem $NUMBER: $NAME"
 
 exit 0
